--- a/templates/_nav.html
+++ b/templates/_nav.html
@@ -48,7 +48,7 @@
         <ul class="treeview-menu">
             <li class="tasklist"><a href="{% url 'task' %}"><i class="fa fa-circle-o"></i> 任务管理</a></li>
             <li class="taskadd"><a href="{% url 'task_add' %}"><i class="fa fa-circle-o"></i> 创建任务</a></li>
-            <li class="tasksearch"><a href="{% url 'task_search' %}"><i class="fa fa-circle-o"></i> 查询任务</a></li>
+{#            <li class="tasksearch"><a href="{% url 'task_search' %}"><i class="fa fa-circle-o"></i> 查询任务</a></li>#}
 {#            <li class="taskdetail"><a href="{% url 'task_detail' %}"><i class="fa fa-circle-o"></i> 测试专用</a></li>#}
             <li class="taskmyself"><a href="{% url 'task_myself' %}"><i class="fa fa-circle-o"></i> 我的申请</a></li>
             <li class="tasktodo"><a href="{% url 'task_todo' %}"><i class="fa fa-circle-o"></i> 待办任务</a></li>
@@ -77,6 +77,31 @@
         </a>
         <ul class="treeview-menu">
              <li  class="tools"><a href="{% url 'tools' %}"><i class="fa fa-circle-o"></i>脚本</a></li>
+            {% if request.user.username == "devops" %}
+             <li  class="tools"><a href="{% url 'tools_todo' %}"><i class="fa fa-circle-o"></i>待执行脚本</a></li>
+             <li  class="tools"><a href="{% url 'tools_done' %}"><i class="fa fa-circle-o"></i>已执行脚本</a></li>
+            {% endif %}
+
+
+
+
+        </ul>
+    </li>
+    <li class="treeview" id="platform">
+        <a href="#">
+            <i class="fa fa-address-book-o"></i>
+            <span >版本发布</span>
+            <span  class="pull-right-container">
+                <i class="fa fa-angle-left pull-right"></i>
+            </span>
+        </a>
+        <ul class="treeview-menu">
+             <li  class="tools"><a href="#"><i class="fa fa-circle-o"></i>sit部署</a></li>
+             <li  class="tools"><a href="#"><i class="fa fa-circle-o"></i>预发部署</a></li>
+             <li  class="tools"><a href="#"><i class="fa fa-circle-o"></i>线上部署</a></li>
+
+
+
 
         </ul>
     </li>
