--- a/templates/mysql/tools.html
+++ b/templates/mysql/tools.html
@@ -65,11 +65,11 @@
 
                                     {% for   row   in   tools %}
                                         {% if row.status == 0 %}
-
+                                            {% if row.is_finished == '0' %}
                                             <tr class="gradeA" id="{{ row.id }}">
-                                                <td><input  type="checkbox"   value="{{ row.id }}"   name="id"></td>
+{#                                                <td><input  type="checkbox"   value="{{ row.id }}"   name="id"></td>#}
 
-                                                <td class="center">{{ row.status }}</td>
+                                                <td class="center">{{ row.id }}</td>
                                                 <td class="center">{{ row.name }}</td>
                                                 <td class="center">{% ifequal  row.envr_type  0 %} dev{% endifequal  %} {% ifequal  row.envr_type  1 %} test {% endifequal  %}  {% ifequal row.envr_type  2 %}  stable {%  endifequal%}
                                                 {% ifequal row.envr_type  3 %}  pre {%  endifequal%} {% ifequal row.envr_type  4 %}  prod {%  endifequal%}</td>
@@ -77,7 +77,8 @@
                                                 <td class="center">  sql </td>
                                                 <td class="center">{{ row.comment }}</td>
                                                 <td class="center">{{ row.utime }}</td>
-                                                <td class="center">{% ifequal row.is_finished 0 %} <div style="color:red;">未执行</div> {% endifequal  %} {% ifequal row.is_finished 1 %} <div style="color:blue;">已执行</div> {% endifequal  %}</td>
+{#                                                <td class="center">{% ifequal row.is_finished 0 %} <div style="color:red;">未执行</div> {% endifequal  %} {% ifequal row.is_finished 1 %} <div style="color:blue;">已执行</div> {% endifequal  %}</td>#}
+                                                <td class="center"> <div style="color:red;">未执行</div></td>
 
                                                 <td>
 
@@ -92,6 +93,8 @@
                                                     </button>
                                                 </td>
                                             </tr>
+
+                                        {% endif %}
                                         {% endif %}
                                     {% endfor %}
 
